[project]
name = "gat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.170.0",
    "google-auth>=2.53.0",
    "oauth2client>=4.1.3",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "termcolor>=3.3.0",
    "watchdog>=6.0.0",
]
